--- a/privacy.html
+++ b/privacy.html
@@ -269,7 +269,6 @@
 
 			<!-- privacy area finish -->
 		</main>
-
 		<!-- footer start -->
 		<footer>
 			<section
@@ -360,7 +359,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-xl-4 col-lg-4 col-md-4">
+									<!-- <div class="col-xl-4 col-lg-4 col-md-4">
 										<div class="wigets mb-30">
 											<div class="widgets-titles">
 												<h4 style="color: black">Our Company</h4>
@@ -368,15 +367,11 @@
 											<div class="wegets-body">
 												<ul>
 													<li><a href="./about.html">About</a></li>
-													<!-- <li><a href="#">Tickets</a></li>
-													<li><a href="#">Knowledge</a></li>
-													<li><a href="#">base</a></li>
-													<li><a href="#">System</a></li>
-													<li><a href="#">Marketing</a></li> -->
+											
 												</ul>
 											</div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<div class="row">
@@ -392,8 +387,7 @@
 				</div>
 			</section>
 		</footer>
-		<!-- footer end -->
-
+		<!-- 
 		<!-- JS here -->
 
 		<script
