--- a/get-started.html
+++ b/get-started.html
@@ -187,7 +187,12 @@
 									<input id="name" type="text" placeholder="Last name" />
 
 									<div class="login-action mb-20 fix"></div>
-
+									<div class="">
+										<p>
+											Sorry, No payment method available at this moment. We will
+											send you an invoice when available
+										</p>
+									</div>
 									<button
 										type="submit"
 										class="btn btn-2 btn-black w-100 sub-started"
