--- a/get-started.html
+++ b/get-started.html
@@ -181,7 +181,7 @@
 									<input
 										id="name"
 										type="text"
-										placeholder="Enter Username or Email address..."
+										placeholder="Enter  Email address..."
 									/>
 									<input id="name" type="text" placeholder=" First name" />
 									<input id="name" type="text" placeholder="Last name" />
