--- a/index.html
+++ b/index.html
@@ -395,10 +395,11 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="row">
 						<div class="col-12">
 							<div class="pricing-more-link text-center mt-50">
-								<p><a href="./get-started.html">Subscribe</a> for a plan</p>
+								<a href="./get-started.html"><p>Subscribe for a plan</p></a>
 							</div>
 						</div>
 					</div>
