--- a/index.html
+++ b/index.html
@@ -399,7 +399,9 @@
 					<div class="row">
 						<div class="col-12">
 							<div class="pricing-more-link text-center mt-50">
-								<a href="./get-started.html"><p>Subscribe for a plan</p></a>
+								<a href="./get-started.html"
+									><p class="btn">Subscribe for a plan</p></a
+								>
 							</div>
 						</div>
 					</div>
