--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 						<div class="col-12">
 							<div class="pricing-more-link text-center mt-50">
 								<a href="./get-started.html"
-									><p class="btn">Subscribe for a plan</p></a
+									><p class="btn price-btn">Subscribe for a plan</p></a
 								>
 							</div>
 						</div>
