--- a/share-hosting.html
+++ b/share-hosting.html
@@ -226,10 +226,15 @@
 												<div class="price-details">
 													<span>Basic</span>
 
-													<h4 class="price"><sub>$</sub>2.15<sub>.00</sub></h4>
+													<h4 class="">
+														<sub>$</sub><span class="price">2.15</span
+														><sub>.00</sub>
+													</h4>
 
-													<a class="btn price-btn" href="./get-started.html"
-														>Get started</a
+													<a
+														class="add-cart btn price-btn"
+														href="./get-started.html"
+														>Add to cart</a
 													>
 												</div>
 
@@ -263,10 +268,15 @@
 												<div class="price-details">
 													<span>Core</span>
 
-													<h4 class="price"><sub>$</sub>4.27<sub>.00</sub></h4>
+													<h4 class="">
+														<sub>$</sub><span class="price">4.27</span
+														><sub>.00</sub>
+													</h4>
 
-													<a class="btn price-btn" href="./get-started.html"
-														>Get started</a
+													<a
+														class="add-cart btn price-btn"
+														href="./get-started.html"
+														>Add to cart</a
 													>
 												</div>
 
@@ -300,10 +310,15 @@
 												<div class="price-details">
 													<span>Advanced</span>
 
-													<h4 class="price"><sub>$</sub>2.72<sub>.00</sub></h4>
+													<h4 class="">
+														<sub>$</sub><span class="price">2.72</span
+														><sub>.00</sub>
+													</h4>
 
-													<a class="btn price-btn" href="./get-started.html"
-														>Get started</a
+													<a
+														class="add-cart btn price-btn"
+														href="./get-started.html"
+														>Add to cart</a
 													>
 												</div>
 
@@ -362,10 +377,15 @@
 												<div class="price-details">
 													<span>Basic</span>
 
-													<h4 class="price"><sub>$</sub>21.45<sub>.00</sub></h4>
+													<h4 class="">
+														<sub>$</sub><span class="price">21.45</span
+														><sub>.00</sub>
+													</h4>
 
-													<a class="btn price-btn" href="./get-started.html"
-														>Get started</a
+													<a
+														class="add-cart btn price-btn"
+														href="./get-started.html"
+														>Add to cart</a
 													>
 												</div>
 
@@ -401,10 +421,15 @@
 												<div class="price-details">
 													<span>Core</span>
 
-													<h4 class="price"><sub>$</sub>47.17<sub>.00</sub></h4>
+													<h4 class="">
+														<sub>$</sub><span class="price">47.17</span
+														><sub>.00</sub>
+													</h4>
 
-													<a class="btn price-btn" href="./get-started.html"
-														>Get started</a
+													<a
+														class="add-cart btn price-btn"
+														href="./get-started.html"
+														>Add to cart</a
 													>
 												</div>
 
@@ -440,10 +465,15 @@
 												<div class="price-details">
 													<span>Advanced</span>
 
-													<h4 class="price"><sub>$</sub>27.17<sub>.00</sub></h4>
+													<h4 class="">
+														<sub>$</sub><span class="price">27.17</span
+														><sub>.00</sub>
+													</h4>
 
-													<a class="btn price-btn" href="./get-started.html"
-														>Get started</a
+													<a
+														class="add-cart btn price-btn"
+														href="./get-started.html"
+														>Add to cart</a
 													>
 												</div>
 
@@ -631,5 +661,6 @@
 		<script src="js/plugins.js"></script>
 
 		<script src="js/main.js"></script>
+		<script src="./addCart.js"></script>
 	</body>
 </html>
