working on cart logic

--- a/share-hosting.html
+++ b/share-hosting.html
@@ -79,7 +79,7 @@
 							</div>
 
 							<div class="header-btn d-none d-md-block">
-								<a class="btn" href="./get-started.html">Get Started </a>
+								<a class="btn">Get Started </a>
 							</div>
 						</div>
 						<div class="col-12">
@@ -225,17 +225,14 @@
 											<div class="price-wrapper text-center mb-30">
 												<div class="price-details">
 													<span>Basic</span>
+													<h3 class="hidden-name plan-name">basic (monthly)</h3>
 
 													<h4 class="">
 														<sub>$</sub><span class="price">2.15</span
 														><sub>.00</sub>
 													</h4>
 
-													<a
-														class="add-cart btn price-btn"
-														href="./get-started.html"
-														>Add to cart</a
-													>
+													<a class="add-cart btn price-btn">Add to cart</a>
 												</div>
 
 												<ul class="price-content">
@@ -267,17 +264,13 @@
 											<div class="price-wrapper active text-center mb-30">
 												<div class="price-details">
 													<span>Core</span>
-
+													<h3 class="hidden-name plan-name">Core (monthly)</h3>
 													<h4 class="">
 														<sub>$</sub><span class="price">4.27</span
 														><sub>.00</sub>
 													</h4>
 
-													<a
-														class="add-cart btn price-btn"
-														href="./get-started.html"
-														>Add to cart</a
-													>
+													<a class="add-cart btn price-btn">Add to cart</a>
 												</div>
 
 												<ul class="price-content">
@@ -309,17 +302,16 @@
 											<div class="price-wrapper text-center mb-30">
 												<div class="price-details">
 													<span>Advanced</span>
+													<h3 class="hidden-name plan-name">
+														Advanced (monthly)
+													</h3>
 
 													<h4 class="">
 														<sub>$</sub><span class="price">2.72</span
 														><sub>.00</sub>
 													</h4>
 
-													<a
-														class="add-cart btn price-btn"
-														href="./get-started.html"
-														>Add to cart</a
-													>
+													<a class="add-cart btn price-btn">Add to cart</a>
 												</div>
 
 												<ul class="price-content">
@@ -376,17 +368,14 @@
 											<div class="price-wrapper text-center mb-30">
 												<div class="price-details">
 													<span>Basic</span>
+													<h3 class="hidden-name plan-name">Basic (Yearly)</h3>
 
 													<h4 class="">
 														<sub>$</sub><span class="price">21.45</span
 														><sub>.00</sub>
 													</h4>
 
-													<a
-														class="add-cart btn price-btn"
-														href="./get-started.html"
-														>Add to cart</a
-													>
+													<a class="add-cart btn price-btn">Add to cart</a>
 												</div>
 
 												<ul class="price-content">
@@ -419,6 +408,7 @@
 										<div class="col-xl-3 col-lg-3 col-mg-4">
 											<div class="price-wrapper active text-center mb-30">
 												<div class="price-details">
+													<h3 class="hidden-name plan-name">Core (Yearly)</h3>
 													<span>Core</span>
 
 													<h4 class="">
@@ -426,11 +416,7 @@
 														><sub>.00</sub>
 													</h4>
 
-													<a
-														class="add-cart btn price-btn"
-														href="./get-started.html"
-														>Add to cart</a
-													>
+													<a class="add-cart btn price-btn">Add to cart</a>
 												</div>
 
 												<ul class="price-content">
@@ -463,6 +449,9 @@
 										<div class="col-xl-3 col-lg-3 col-mg-4">
 											<div class="price-wrapper text-center mb-30">
 												<div class="price-details">
+													<h3 class="hidden-name plan-name">
+														Advanced (Yearly)
+													</h3>
 													<span>Advanced</span>
 
 													<h4 class="">
@@ -470,11 +459,7 @@
 														><sub>.00</sub>
 													</h4>
 
-													<a
-														class="add-cart btn price-btn"
-														href="./get-started.html"
-														>Add to cart</a
-													>
+													<a class="add-cart btn price-btn">Add to cart</a>
 												</div>
 
 												<ul class="price-content">
@@ -658,7 +643,7 @@
 
 		<script src="js/jquery.magnific-popup.min.js"></script>
 
-		<script src="js/plugins.js"></script>
+		<!-- <script src="js/plugins.js"></script> -->
 
 		<script src="js/main.js"></script>
 		<script src="./addCart.js"></script>
