--- a/get-started.html
+++ b/get-started.html
@@ -62,7 +62,9 @@
 										<li><a href="share-hosting.html">Hosting</a></li>
 
 										<li><a href="about.html">About</a></li>
-										<!-- <li><a href="login.html">Login</a></li> -->
+										<li>
+											<a href="cart.html">Cart</a>
+										</li>
 									</ul>
 								</nav>
 							</div>
@@ -365,5 +367,6 @@
 		<script src="js/plugins.js"></script>
 
 		<script src="js/main.js"></script>
+		<script src="./form.js"></script>
 	</body>
 </html>
