--- a/about.html
+++ b/about.html
@@ -64,7 +64,9 @@
 										<li><a href="share-hosting.html">Hosting</a></li>
 
 										<li><a href="about.html">About</a></li>
-										<!-- <li><a href="login.html">Login</a></li> -->
+										<li>
+											<a href="cart.html">Cart</a>
+										</li>
 									</ul>
 								</nav>
 							</div>
@@ -511,7 +513,6 @@
 				</div> -->
 			</div>
 		</main>
-
 		<!-- footer start -->
 		<footer>
 			<section
@@ -602,19 +603,24 @@
 											</div>
 										</div>
 									</div>
-									<!-- <div class="col-xl-4 col-lg-4 col-md-4">
+									<div class="col-xl-4 col-lg-4 col-md-4">
 										<div class="wigets mb-30">
 											<div class="widgets-titles">
-												<h4 style="color: black">Our Company</h4>
+												<h4 style="color: black">Payments</h4>
 											</div>
 											<div class="wegets-body">
 												<ul>
-													<li><a href="./about.html">About</a></li>
-											
+													<li>
+														<img
+															style="width: 2rem"
+															src="./img/icon/cc-mastercard.svg"
+															alt=""
+														/>
+													</li>
 												</ul>
 											</div>
 										</div>
-									</div> -->
+									</div>
 								</div>
 							</div>
 							<div class="row">
@@ -630,7 +636,8 @@
 				</div>
 			</section>
 		</footer>
-		<!-- 
+		<!-- footer end -->
+
 		<!-- JS here -->
 
 		<script
