--- a/cart.html
+++ b/cart.html
@@ -62,7 +62,9 @@
 										<li><a href="share-hosting.html">Hosting</a></li>
 
 										<li><a href="about.html">About</a></li>
-										<!-- <li><a href="login.html">Login</a></li> -->
+										<li>
+											<a href="cart.html">Cart</a>
+										</li>
 									</ul>
 								</nav>
 							</div>
@@ -125,7 +127,7 @@
 
 			<section
 				class="breadcrumb-area"
-				style="background-image: url(img/bg/4991.jpg)"
+				style="background-image: url(img/bg/37691.jpg)"
 			>
 				<div class="container">
 					<div class="row">
@@ -162,10 +164,7 @@
 								<h3 class="text-center mb-60">Cart Items</h3>
 
 								<div action="#" id="sub-form" class="cartWrapper">
-									<div class="cartItemWrapper">
-										<div class="planName">name of plan is</div>
-										<div class="planPrice">8</div>
-									</div>
+									<div class="cartItemWrapper"></div>
 								</div>
 								<div class="">
 									<p>
@@ -187,7 +186,10 @@
 
 		<!-- footer start -->
 		<footer>
-			<section class="footer-area pb-90 bg-footer">
+			<section
+				class="footer-area pb-90 bg-footer"
+				data-background="img/bg/footer-bg.jpg"
+			>
 				<div class="container">
 					<div
 						class="row d-flex justify-content-start justify-content-md-between align-items-center"
@@ -272,19 +274,24 @@
 											</div>
 										</div>
 									</div>
-									<!-- <div class="col-xl-4 col-lg-4 col-md-4">
+									<div class="col-xl-4 col-lg-4 col-md-4">
 										<div class="wigets mb-30">
 											<div class="widgets-titles">
-												<h4 style="color: black">Our Company</h4>
+												<h4 style="color: black">Payments</h4>
 											</div>
 											<div class="wegets-body">
 												<ul>
-													<li><a href="./about.html">About</a></li>
-											
+													<li>
+														<img
+															style="width: 2rem"
+															src="./img/icon/cc-mastercard.svg"
+															alt=""
+														/>
+													</li>
 												</ul>
 											</div>
 										</div>
-									</div> -->
+									</div>
 								</div>
 							</div>
 							<div class="row">
@@ -300,7 +307,8 @@
 				</div>
 			</section>
 		</footer>
-		<!-- 
+		<!-- footer end -->
+
 		<!-- JS here -->
 
 		<script
