--- a/share-hosting.html
+++ b/share-hosting.html
@@ -64,7 +64,9 @@
 										<li><a href="share-hosting.html">Hosting</a></li>
 
 										<li><a href="about.html">About</a></li>
-										<!-- <li><a href="login.html">Login</a></li> -->
+										<li>
+											<a href="cart.html">Cart</a>
+										</li>
 									</ul>
 								</nav>
 							</div>
@@ -79,7 +81,7 @@
 							</div>
 
 							<div class="header-btn d-none d-md-block">
-								<a class="btn">Get Started </a>
+								<a class="btn" href="./get-started.html">Get Started </a>
 							</div>
 						</div>
 						<div class="col-12">
@@ -541,6 +543,10 @@
 							</div>
 							<div class="footer-social text-center">
 								<!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
+								<!-- <a href="#"><i class="fab fa-twitter"></i></a>
+								<a href="#"><i class="fab fa-behance"></i></a>
+								<a href="#"><i class="fab fa-linkedin"></i></a>
+								<a href="#"><i class="fab fa-youtube"></i></a> -->
 							</div>
 						</div>
 						<div class="col-xl-8 col-lg-8">
@@ -580,19 +586,24 @@
 											</div>
 										</div>
 									</div>
-									<!-- <div class="col-xl-4 col-lg-4 col-md-4">
+									<div class="col-xl-4 col-lg-4 col-md-4">
 										<div class="wigets mb-30">
 											<div class="widgets-titles">
-												<h4 style="color: black">Our Company</h4>
+												<h4 style="color: black">Payments</h4>
 											</div>
 											<div class="wegets-body">
 												<ul>
-													<li><a href="./about.html">About</a></li>
-											
+													<li>
+														<img
+															style="width: 2rem"
+															src="./img/icon/cc-mastercard.svg"
+															alt=""
+														/>
+													</li>
 												</ul>
 											</div>
 										</div>
-									</div> -->
+									</div>
 								</div>
 							</div>
 							<div class="row">
@@ -608,7 +619,8 @@
 				</div>
 			</section>
 		</footer>
-		<!-- 
+		<!-- footer end -->
+
 		<!-- JS here -->
 
 		<script
