cart update finished

--- a/cart.html
+++ b/cart.html
@@ -166,14 +166,16 @@
 								<div action="#" id="sub-form" class="cartWrapper">
 									<div class="cartItemWrapper"></div>
 								</div>
+								<div class="total"></div>
 								<div class="">
 									<p>
 										Sorry, No payment method available at this moment. We will
 										send you an invoice when available
 									</p>
 								</div>
-								<button class="btn btn-2 btn-black w-100 sub-started">
-									Purchase
+
+								<button class="btn btn-2 btn-black w-100">
+									<a href="./get-started.html">proceed</a>
 								</button>
 							</div>
 						</div>
