--- a/get-started.html
+++ b/get-started.html
@@ -166,7 +166,7 @@
 								<form action="#" id="sub-form">
 									<label for="cars">Choose a plan</label>
 
-									<select name="sub-plans" id="sub-plans">
+									<select style="display: none" name="sub-plans" id="sub-plans">
 										<option value="basic-monthly">
 											Basic Hosting (monthly)
 										</option>
@@ -181,12 +181,12 @@
 									</select>
 
 									<input
-										id="name"
+										id="email"
 										type="text"
 										placeholder="Enter email address"
 									/>
-									<input id="name" type="text" placeholder=" First name" />
-									<input id="name" type="text" placeholder="Last name" />
+									<input id="fname" type="text" placeholder=" First name" />
+									<input id="lname" type="text" placeholder="Last name" />
 
 									<div class="login-action mb-20 fix"></div>
 									<div class="">
