--- a/cart.html
+++ b/cart.html
@@ -167,12 +167,12 @@
 									<div class="cartItemWrapper"></div>
 								</div>
 								<div class="total"></div>
-								<div class="">
+								<!-- <div class="">
 									<p>
 										Sorry, No payment method available at this moment. We will
 										send you an invoice when available
 									</p>
-								</div>
+								</div> -->
 
 								<button class="btn btn-2 btn-black w-100">
 									<a href="./get-started.html">proceed</a>
