--- a/get-started.html
+++ b/get-started.html
@@ -164,7 +164,7 @@
 								<h3 class="text-center mb-60">Subscription</h3>
 
 								<form action="#" id="sub-form">
-									<label for="cars">Choose a plan</label>
+									<!-- <label for="cars">Choose a plan</label>
 
 									<select style="display: none" name="sub-plans" id="sub-plans">
 										<option value="basic-monthly">
@@ -178,7 +178,7 @@
 										<option value="Advanced-yearly">
 											Advanced Hosting(yearly)
 										</option>
-									</select>
+									</select> -->
 
 									<input
 										id="email"
@@ -301,19 +301,24 @@
 											</div>
 										</div>
 									</div>
-									<!-- <div class="col-xl-4 col-lg-4 col-md-4">
+									<div class="col-xl-4 col-lg-4 col-md-4">
 										<div class="wigets mb-30">
 											<div class="widgets-titles">
-												<h4 style="color: black">Our Company</h4>
+												<h4 style="color: black">Payments</h4>
 											</div>
 											<div class="wegets-body">
 												<ul>
-													<li><a href="./about.html">About</a></li>
-											
+													<li>
+														<img
+															style="width: 2rem"
+															src="./img/icon/cc-mastercard.svg"
+															alt=""
+														/>
+													</li>
 												</ul>
 											</div>
 										</div>
-									</div> -->
+									</div>
 								</div>
 							</div>
 							<div class="row">
@@ -329,7 +334,8 @@
 				</div>
 			</section>
 		</footer>
-		<!-- 
+		<!-- footer end -->
+
 		<!-- JS here -->
 
 		<script
