--- a/cart.html
+++ b/cart.html
@@ -174,9 +174,9 @@
 									</p>
 								</div> -->
 
-								<button class="btn btn-2 btn-black w-100">
-									<a href="./get-started.html">proceed</a>
-								</button>
+								<a href="./get-started.html"
+									><button class="btn btn-2 btn-black w-100">proceed</button>
+								</a>
 							</div>
 						</div>
 					</div>
