--- a/get-started.html
+++ b/get-started.html
@@ -187,7 +187,7 @@
 									/>
 									<input id="fname" type="text" placeholder=" First name" />
 									<input id="lname" type="text" placeholder="Last name" />
-									<input id="pnumber" type="number" placeholder="Last name" />
+									<input id="pnumber" type="tel" placeholder="Phone number" />
 									<label for="notes">Additional information (optional):</label>
 									<textarea rows="4" cols="50" id="notes"> </textarea>
 
