--- a/about.html
+++ b/about.html
@@ -80,9 +80,9 @@
 								></a>
 							</div>
 
-							<div class="header-btn d-none d-md-block">
+							<!-- <div class="header-btn d-none d-md-block">
 								<a class="btn" href="./get-started.html">Get Started </a>
-							</div>
+							</div> -->
 						</div>
 						<div class="col-12">
 							<div class="mobile-menu"></div>
