--- a/get-started.html
+++ b/get-started.html
@@ -78,9 +78,9 @@
 								></a>
 							</div>
 
-							<div class="header-btn d-none d-md-block">
+							<!-- <div class="header-btn d-none d-md-block">
 								<a class="btn" href="./get-started.html">Get Started </a>
-							</div>
+							</div> -->
 						</div>
 						<div class="col-12">
 							<div class="mobile-menu"></div>
@@ -189,9 +189,9 @@
 									<input id="lname" type="text" placeholder="Last name" />
 									<input id="pnumber" type="tel" placeholder="Phone number" />
 									<label for="notes">Additional information (optional):</label>
-									<textarea rows="4" cols="50" id="notes"> </textarea>
+									<textarea rows="" cols="50" id="notes"> </textarea>
 
-									<div class="total"></div>
+									<div class="total">Total: $ 0.00</div>
 									<!-- <div class="">
 										<p>
 											Sorry, No payment method available at this moment. We will
