--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 								></a>
 							</div>
 
-							<div class="header-btn d-none d-md-block">
+							<!-- <div class="header-btn d-none d-md-block">
 								<a class="btn" href="./get-started.html">Get Started </a>
-							</div>
+							</div> -->
 						</div>
 						<div class="col-12">
 							<div class="mobile-menu"></div>
@@ -404,7 +404,7 @@
 						</div>
 					</div>
 
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-12">
 							<div class="pricing-more-link text-center mt-50">
 								<a href="./get-started.html"
@@ -412,7 +412,7 @@
 								>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</section>
 			<!-- pricing area end -->
