--- a/shared-hosting.html
+++ b/shared-hosting.html
@@ -141,7 +141,7 @@
 								<ul class="breadcrumb-menu">
 									<li><a href="index.html">home</a></li>
 
-									<li><span>Shared Hosting</span></li>
+									<li><span>Our Plans</span></li>
 								</ul>
 							</div>
 						</div>
@@ -168,7 +168,15 @@
 							</div>
 						</div>
 					</div>
+					<div class="row">
+						<div class="col-xl-6 offset-xl-3 col-lg-8 offset-lg-2">
+							<div class="section-title text-center mb-70">
+								<h5>Hosting</h5>
 
+								<p>Explore plans hosting plans</p>
+							</div>
+						</div>
+					</div>
 					<div class="row">
 						<div class="col-12">
 							<ul class="nav price-tabs mb-50" id="myTab" role="tablist">
