--- a/cart.html
+++ b/cart.html
@@ -59,7 +59,15 @@
 								<nav id="mobile-menu">
 									<ul>
 										<li><a href="index.html">Home </a></li>
-										<li><a href="share-hosting.html">Hosting</a></li>
+										<li>
+											<a class="arrow-down" href="#">Plans</a>
+											<ul class="submenu">
+												<li>
+													<a href="shared-hosting.html">shared-hosting</a>
+												</li>
+												<li><a href="email-plans.html">email-plans</a></li>
+											</ul>
+										</li>
 
 										<li><a href="about.html">About</a></li>
 										<li>
