--- a/email-plans.html
+++ b/email-plans.html
@@ -48,7 +48,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div
-							class="col-xl-4 col-lg-3 col-md-5 d-flex align-items-lg-center"
+							class="col-xl-3 col-lg-3 col-md-5 d-flex align-items-lg-center"
 						>
 							<div class="logo">
 								<a href="index.html">
@@ -61,7 +61,15 @@
 								<nav id="mobile-menu">
 									<ul>
 										<li><a href="index.html">Home </a></li>
-										<li><a href="share-hosting.html">Hosting</a></li>
+										<li>
+											<a class="arrow-down" href="#">Plans</a>
+											<ul class="submenu">
+												<li>
+													<a href="shared-hosting.html">shared-hosting</a>
+												</li>
+												<li><a href="email-plans.html">email-plans</a></li>
+											</ul>
+										</li>
 
 										<li><a href="about.html">About</a></li>
 										<li>
@@ -72,7 +80,7 @@
 							</div>
 						</div>
 						<div
-							class="col-xl-4 col-lg-3 col-md-7 d-flex flex-row-reverse align-items-center justify-content-xl-end"
+							class="col-xl-3 col-lg-3 col-md-7 d-flex flex-row-reverse align-items-center justify-content-xl-end"
 						>
 							<div class="bar d-none d-xl-block">
 								<a class="info-bar" href="javascript:void(0);"
@@ -160,7 +168,7 @@
 							<div class="section-title text-center mb-70">
 								<h5>Email Hosting</h5>
 
-								<p>Explore plans hosting plans</p>
+								<p>Explore plans email hosting plans</p>
 							</div>
 						</div>
 					</div>
@@ -321,11 +329,11 @@
 												<div class="price-details">
 													<span>Level 1</span>
 													<h3 class="hidden-name plan-name">
-														Level 1 (monthly)
+														Level 1 (Yearly)
 													</h3>
 
 													<h4 class="">
-														<sub>$</sub><span class="price">1.72</span
+														<sub>$</sub><span class="price">20.59</span
 														><sub>.00</sub>
 													</h4>
 
@@ -349,10 +357,10 @@
 												<div class="price-details">
 													<span>Level 2</span>
 													<h3 class="hidden-name plan-name">
-														Level 2 (monthly)
+														Level 2 (yearly)
 													</h3>
 													<h4 class="">
-														<sub>$</sub><span class="price">1.64</span
+														<sub>$</sub><span class="price">19.73</span
 														><sub>.00</sub>
 													</h4>
 
@@ -376,11 +384,11 @@
 												<div class="price-details">
 													<span>Level 3</span>
 													<h3 class="hidden-name plan-name">
-														Level 3 (monthly)
+														Level 3 (yearly)
 													</h3>
 
 													<h4 class="">
-														<sub>$</sub><span class="price">1.57</span
+														<sub>$</sub><span class="price">18.88</span
 														><sub>.00</sub>
 													</h4>
 
