--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 											<div class="wegets-body">
 												<ul>
 													<li><a href="./privacy.html">Privacy policy</a></li>
-													<li><a href="./plans.html">plans</a></li>
+													<!-- <li><a href="./plans.html">plans</a></li> -->
 												</ul>
 											</div>
 										</div>
