--- a/get-started.html
+++ b/get-started.html
@@ -59,7 +59,15 @@
 								<nav id="mobile-menu">
 									<ul>
 										<li><a href="index.html">Home </a></li>
-										<li><a href="share-hosting.html">Hosting</a></li>
+										<li>
+											<a class="arrow-down" href="#">Plans</a>
+											<ul class="submenu">
+												<li>
+													<a href="shared-hosting.html">shared-hosting</a>
+												</li>
+												<li><a href="email-plans.html">email-plans</a></li>
+											</ul>
+										</li>
 
 										<li><a href="about.html">About</a></li>
 										<li>
@@ -198,10 +206,7 @@
 									</div> -->
 									<div>
 										<p>
-											Make your payment directly into our bank account. Please
-											use your Order ID as the payment reference. Your order
-											will not be processed until the funds have been cleared in
-											our account.
+											Our support team will contact you to complete the payment
 										</p>
 									</div>
 									<div>
