--- a/cart.html
+++ b/cart.html
@@ -258,7 +258,7 @@
 											<div class="wegets-body">
 												<ul>
 													<li><a href="./privacy.html">Privacy policy</a></li>
-													<li><a href="./share-hosting.html">hosting</a></li>
+													<!-- <li><a href="./plans.html">plans</a></li> -->
 												</ul>
 											</div>
 										</div>
@@ -290,11 +290,18 @@
 												<h4 style="color: black">Payments</h4>
 											</div>
 											<div class="wegets-body">
-												<ul>
+												<ul class="paycard">
 													<li>
 														<img
 															style="width: 2rem"
 															src="./img/icon/cc-mastercard.svg"
+															alt=""
+														/>
+													</li>
+													<li>
+														<img
+															style="width: 2rem"
+															src="./img/icon/cc-visa.svg"
 															alt=""
 														/>
 													</li>
