--- a/email-plans.html
+++ b/email-plans.html
@@ -414,6 +414,7 @@
 				</div>
 			</div>
 		</main>
+
 		<!-- footer start -->
 		<footer>
 			<section
@@ -478,7 +479,7 @@
 											<div class="wegets-body">
 												<ul>
 													<li><a href="./privacy.html">Privacy policy</a></li>
-													<li><a href="./share-hosting.html">hosting</a></li>
+													<!-- <li><a href="./plans.html">plans</a></li> -->
 												</ul>
 											</div>
 										</div>
@@ -510,11 +511,18 @@
 												<h4 style="color: black">Payments</h4>
 											</div>
 											<div class="wegets-body">
-												<ul>
+												<ul class="paycard">
 													<li>
 														<img
 															style="width: 2rem"
 															src="./img/icon/cc-mastercard.svg"
+															alt=""
+														/>
+													</li>
+													<li>
+														<img
+															style="width: 2rem"
+															src="./img/icon/cc-visa.svg"
 															alt=""
 														/>
 													</li>
