--- a/index.html
+++ b/index.html
@@ -727,11 +727,18 @@
 												<h4 style="color: black">Payments</h4>
 											</div>
 											<div class="wegets-body">
-												<ul>
+												<ul class="paycard">
 													<li>
 														<img
 															style="width: 2rem"
 															src="./img/icon/cc-mastercard.svg"
+															alt=""
+														/>
+													</li>
+													<li>
+														<img
+															style="width: 2rem"
+															src="./img/icon/cc-visa.svg"
 															alt=""
 														/>
 													</li>
