--- a/shared-hosting.html
+++ b/shared-hosting.html
@@ -181,7 +181,7 @@
 							<div class="section-title text-center mb-70">
 								<h5>Hosting</h5>
 
-								<p>Explore plans hosting plans</p>
+								<p>Explore hosting plans</p>
 							</div>
 						</div>
 					</div>
