--- a/email-plans.html
+++ b/email-plans.html
@@ -168,7 +168,7 @@
 							<div class="section-title text-center mb-70">
 								<h5>Email Hosting</h5>
 
-								<p>Explore plans email hosting plans</p>
+								<p>Explore email hosting plans</p>
 							</div>
 						</div>
 					</div>
